--- a/codingninja.html
+++ b/codingninja.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizlet/Home</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- nav -->
     <main class="main">
         <header class="header">
             <a href="#" class="logo">Quizlet</a>
@@ -22,8 +21,7 @@
             </nav>
         </header>
     </main>    
-    
-    <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -31,13 +29,14 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="image1.jpg" class="d-block w-100" alt="Slide 1">
+                <img src="#" class="d-block" alt="Slide 1">
             </div>
             <div class="carousel-item">
-                <img src="image2.jpg" class="d-block w-100" alt="Slide 2">
+                <img src="#" class="d-block" alt="Slide 2">
+    
             </div>
             <div class="carousel-item">
-                <img src="image3.jpg" class="d-block w-100" alt="Slide 3">
+                <img src="#" class="d-block" alt="Slide 3">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -48,154 +47,36 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div> -->
-    <div id="carousel">
-        <h1>Events We Organize here</h1>
-        <div id="hero">
-          <div class="arrow" id="arrow-left">
-            <img src="images/arrow.jpg" alt="arrow left" />
-          </div>
-          <div id="image-slider">
-            <div id="frame">
-              <div class="image-container">
-                <img src="" alt="gym" />
-              </div>
-              <div class="image-container">
-                <img src="" alt="gym" />
-              </div>
-              <div class="image-container">
-                <img src="" alt="gym" />
-              </div>
-              <div class="image-container">
-                <img src="" alt="gym" />
-              </div>
-            </div>
-          </div>
-          <div class="arrow" id="arrow-right">
-            <img src="images/arrow.jpg" alt="arrow right" />
-          </div>
-        </div>
     </div>
-    <div id="page2">
-    <div id="card-container">
-    <div class="card">
-        <div class="services front">
-          <div class="service-image">
-            <img src="" alt="yoga" />
-          </div>
-          <h3>Quiz Night</h3>
-          <p>
-            Do you have what it takes to be the ultimate quiz champion? Gather your friends and join us for an unforgettable Quiz Night! Compete, have fun, and showcase your knowledge. Enjoy an evening filled with excitement, laughter, and challenges!
-          </p>
-          <button onclick="flipCard()">See More</button>
-        </div>
-        <div class="services back">
-          <h3>some important facts about yoga?</h3>
-          <ul>
-            <li>
-              <p>Lorem ipsum dolor sit amet.</p>
-            </li>
-            <li>
-              <p>Suscipit accusamus ut nulla sapiente.</p>
-            </li>
-            <li>
-              <p>Nesciunt autem facilis architecto dolorem.</p>
-            </li>
-            <li>
-              <p>Labore reprehenderit id unde ducimus.</p>
-            </li>
-          </ul>
-        </div>
-    </div>
-    <div class="card">
-      <div class="services front">
-        <div class="service-image">
-          <img src="" alt="muscel">
-        </div>
-        <h3 id="muscle">Quiz Show</h3>
-        <p>
-            Get ready and bring your A-game! Join us for brain-teasing questions and fun trivia games designed for both contestants and the audience. Compete for trophies, or cheer your friends as they take on the challenge.
-        </p>
-        <button>See More</button>
-      </div>
-      <div class="services back">
-        <h3>some important facts about muscle building?</h3>
-        <ul>
-          <li>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </li>
-          <li>
-            <p>Suscipit accusamus ut nulla sapiente.</p>
-          </li>
-          <li>
-            <p>Nesciunt autem facilis architecto dolorem.</p>
-          </li>
-          <li>
-            <p>Labore reprehenderit id unde ducimus.</p>
-          </li>
-        </ul>
-      </div>
-    </div> 
-    <div class="card">
-      <div class="services front">
-        <div class="service-image">
-          <img src="" alt="rehabilation">
-        </div>
-        <h3>Quiz Trivia</h3>
-        <p>
-            Do you have what it takes to be the ultimate quiz champion? Gather your friends and join us for an electrifying Quiz Night at Explotorium, Chitkara University. Test your knowledge and engage in a fun, friendly competition.
-        </p>
-        <button>See More</button>
-      </div>
-      <div class="services back">
-        <h3>some important facts about Rehabilation?</h3>
-        <ul>
-          <li>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </li>
-          <li>
-            <p>Suscipit accusamus ut nulla sapiente.</p>
-          </li>
-          <li>
-            <p>Nesciunt autem facilis architecto dolorem.</p>
-          </li>
-          <li>
-            <p>Labore reprehenderit id unde ducimus.</p>
-          </li>
-        </ul>
-      </div>
-  </div>
-  </div>
-    </div>
-    <!-- <div class="cards" id="card-section">
+    <div class="container my-5 custom-bg" id="card-section">
         <h1>Events Organised By Us:-</h1>
-        <div class="card_container">
-            <div class="card">
+        <div class="child2quiz">
+            <div class="child-classquiz">
                 <img src="#" class="card-img-top" alt="Card Image 1">
                 <div class="card-body">
                     <h5 class="card-title">Quiz Night</h5>
                     <p class="card-text">Do you have what it takes to be the ultimate quiz champion? Gather your friends and join us for an unforgettable Quiz Night! Compete, have fun, and showcase your knowledge. Enjoy an evening filled with excitement, laughter, and challenges!</p>
                 </div> 
             </div>
-            <div class="card">
+            <div class="child-classquiz">
                 <img src="#" class="card-img-top" alt="Card Image 2">
                 <div class="card-body">
                     <h5 class="card-title">Quiz Show</h5>
-                    <p class="card-text"></p>
+                    <p class="card-text">Get ready and bring your A-game! Join us for brain-teasing questions and fun trivia games designed for both contestants and the audience. Compete for trophies, or cheer your friends as they take on the challenge.</p>
                 </div>   
             </div>
             <div class="child-classquiz">
                 <img src="#" class="card-img-top" alt="Card Image 3">
                 <div class="card-body">
-                    <h5 class="card-title"></h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">Quiz Trivia</h5>
+                    <p class="card-text">Do you have what it takes to be the ultimate quiz champion? Gather your friends and join us for an electrifying Quiz Night at Explotorium, Chitkara University. Test your knowledge and engage in a fun, friendly competition.</p>
                 </div>
             </div>
         </div>
-    </div>    -->
-
-    <div class="page3">
-        <section id="testimonials" class="my-5">
+    </div>   
+ 
+<div class="contain">
+    <section id="testimonials" class="my-5">
         <h2 class="text-center">What Our Users Say</h2>
         <div class="container">
             <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
@@ -230,9 +111,9 @@
             </div>
         </div>
     </section>
-    </div>
+</div>
 
-    <div class="contain2">
+<div class="contain2">
     <section id="features" class="py-5 bg-light">
         <h2 class="text-center">Why Choose Quizlet?</h2>
         <div class="container">
@@ -255,7 +136,7 @@
             </div>
         </div>
     </section>
-    </div>
+</div>
 
     <section id="blog" class="py-5">
         <h2 class="text-center">Latest News & Blogs</h2>
